--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
           <!-- ALL APIs  -->
 
           <div class="container px-4 py-5" id="allapi">
-            <h2 class="pb-2 border-bottom">Custom cards</h2>
-
+            <h2 class="pb-2 border-bottom">API Category</h2>
             <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
               <div class="col">
                 <a href="#Geolocation" class=" text-decoration-none ">
@@ -77,10 +76,7 @@
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                       <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Geolocation Api</h3>
                       <ul class="d-flex list-unstyled mt-auto">
-                        <li class="me-auto">
-                          <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                            class="rounded-circle border border-white">
-                        </li>
+                       
                         <li class="d-flex align-items-center me-3">
                           <svg class="bi me-2" width="1em" height="1em">
                             <use xlink:href="#geo-fill"></use>
@@ -109,11 +105,7 @@
                       <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Random User Generator
                       </h3>
                       <ul class="d-flex list-unstyled mt-auto">
-                        <li class="me-auto">
-                          <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                            class="rounded-circle border border-white">
-                        </li>
-                        <li class="d-flex align-items-center me-3">
+                                      <li class="d-flex align-items-center me-3">
                           <svg class="bi me-2" width="1em" height="1em">
                             <use xlink:href="#geo-fill"></use>
                           </svg>
@@ -140,10 +132,6 @@
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                       <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">ai-picture</h3>
                       <ul class="d-flex list-unstyled mt-auto">
-                        <li class="me-auto">
-                          <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                            class="rounded-circle border border-white">
-                        </li>
                         <li class="d-flex align-items-center me-3">
                           <svg class="bi me-2" width="1em" height="1em">
                             <use xlink:href="#geo-fill"></use>
@@ -267,7 +255,7 @@
     </div>
 
     <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-      <p>© 2024 Company, Inc. All rights reserved.</p>
+      <p>© 2024 Mohanavenkatesh, Inc. All rights reserved.</p>
       <ul class="list-unstyled d-flex">
         <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
               <use xlink:href="#twitter"></use>
